[gd_scene load_steps=6 format=1]

[ext_resource path="res://scenes/player.gd" type="Script" id=1]
[ext_resource path="res://img/positive_feel.png" type="Texture" id=2]
[ext_resource path="res://img/negative_feel.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 109.045

[sub_resource type="Animation" id=1]

resource/name = "grower"
length = 3.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 2, 3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.33, 0.33 ), Vector2( 0.36, 0.36 ), Vector2( 0.4, 0.4 ) ]
}

[node name="player" type="RigidBody2D"]

transform/pos = Vector2( 454.183, 262.117 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = 0.5
damp_override/angular = -1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="pos_feels" type="Sprite" parent="."]

transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="pos_feels_animator" type="AnimationPlayer" parent="pos_feels"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/grower = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="neg_feels" type="Sprite" parent="."]

transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0


